# character-fidelity-lab

./: .env.example  Makefile  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
data/characters/: maelor_v1.json  maelor_v2.json
data/evals/: eval_cases.jsonl
data/index/: chunks.jsonl  vector_store_gemini.json
data/lore/: 00_world_overview.md  01_character_maelor.md  02_faction_sable_chorus.md  03_sunken_temple.md  04_false_canon_and_boundaries.md  05_voice_examples.md
reports/: v1_gemini.jsonl  v1_gemini.summary.json  v1_vs_v2_gemini.md  v2_gemini.jsonl  v2_gemini.summary.json
src/character_lab/: answer.py  ask.py  build_index.py  chunking.py  compare_runs.py  embeddings.py  guardrails.py  models.py  prompting.py  run_eval.py  scorer.py  vector_store.py
src/character_lab/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py
tests/: test_chunking.py  test_eval_smoke.py  test_guardrails.py  test_retrieval.py
