[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "character-fidelity-lab"
version = "0.1.0"
description = "A compact RAG, guardrails, and evaluation harness for LLM-powered fictional characters."
requires-python = ">=3.10"
authors = [{name = "Conrad Compagna"}]

[tool.setuptools.packages.find]
where = ["src"]
